# nsv

./: .env  .gitattributes  .gitconfig  .gitignore  .prettierrc.mjs  .release-please-manifest.json  .swcrc  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  config.json  nsv  nsv.cmd  nsv.fish  nsv.ps1  nsv.sh  package.json  pnpm-workspace.yaml  release-please-config.json  s.sh  serve.sh  t.sh  tsconfig.json  tt.json  user-config.json
.cargo/: config.toml
.github/workflow/: release-pause.yml
.github/workflows/: build.yml  caeck-init.yml  publish.yml  release-pause.yml  release-please.yml  rust.yml
crates/docs/: .gitignore  package.json  tsconfig.json
crates/docs/.vitepress/: integrations.ts
crates/docs/.vitepress/config/: en.ts  index.ts  shared.ts  zh.ts
crates/docs/.vitepress/theme/: index.ts  style.css
crates/docs/en/: index.md
crates/docs/zh/: index.md
crates/docs/zh/guide/command/: add.md
crates/docs/zh/guide/intro/: getting-started.md  index.md
crates/nsv/: CHANGELOG.md  Cargo.toml
crates/nsv/src/: main.rs
crates/nsv/src/cli/: mod.rs
crates/nsv/src/command/: adapt.rs  add.rs  config.rs  install.rs  mod.rs  use.rs
crates/nsv/src/config/: mod.rs
crates/nsv/src/log/: mod.rs
crates/root/: Cargo.toml
crates/root/src/: lib.rs
crates/root/src/config/: mod.rs
crates/root/src/context/: mod.rs
crates/root/src/core/: add.rs  init.rs  mod.rs  node.rs  use.rs
crates/root/src/node/: mod.rs
crates/root/src/util/: dir.rs  download.rs  mod.rs
crates/serve/: Cargo.toml
crates/serve/src/: config.rs  main.rs
crates/serve/src/app/: mod.rs
crates/serve/src/controller/: cdn.rs  mod.rs
crates/serve/src/db/: mod.rs
crates/serve/src/model/: cdn.rs
crates/serve/src/router/: cdn.rs  mod.rs
crates/serve/src/service/: mod.rs
crates/serve/src/util/: file.rs  mod.rs
docs/: package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: issuse.vue
docs/.vitepress/theme/style/: index.scss
docs/src/: api-examples.md  index.md
docs/src/guide/: intro.md  start.md  what-is-nsv.md
docs/src/guide/cli/: discern.md  local.md  use.md
docs/src/version/: index.md
install/: install.fish  install.ps1  install.sh
script/: postinstall.prod.js
script/ci/: build.linux.sh  build.macos.sh  build.windows.sh
serve/: .gitignore  bun.lockb  index.js  package.json
serve/public/: index.json
serve/src/: index.ts
serve/src/lib/: node.ts
serve/src/util/: index.ts
shell/: install.ps1  install.sh  test.sh
src/: context.ts  index.ts  init.ts
src/lib/: command.ts  download.ts  env.ts  http.ts  progress.ts  system.ts  version.ts
src/module/: cli.ts  command.ts  config.ts  discern.ts  install.ts  log.ts  menu.ts  process.ts  version.ts
src/util/: index.ts  system.ts
tools/7-Zip/: readme.txt
tools/json/: json.sh
types/: global.d.ts  process.d.ts
