[package]
name = "nsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive", "env"] }
root = { path = "../root" }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
