[package]
name = "root"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
futures-util = "0.3.29"
reqwest = { version = "0.11.22", features = ["stream", "json", "rustls"] }
semver = "1.0.20"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
sha256 = "1.5.0"
regex = "1.1.4"
dirs = "5.0.1"
derivative = "2.2.0"

[target.'cfg(windows)'.dependencies]
sevenz-rust = "0.5.4"

[target.'cfg(unix)'.dependencies]
tar = "0.4.40"
xz2 = { version = "0.1.7", features = ["tokio"] }
